# adiff

./: .dockerignore  .gitignore  .travis.yml  Annotator.hs  LICENSE  Makefile  README.md  package.yaml  stack.yaml  vdiff.cabal
adiff/: README.md  Setup.hs  package.yaml
adiff-docker/: .gitignore  README.md  package.yaml
adiff-docker/src/: Main.hs
adiff-server/: .gitignore  README.md  package.yaml
adiff-server/app/: Main.hs
adiff-server/templates/: findings.hamlet  overview.hamlet  program.hamlet  queries.hamlet  scratchpad.hamlet  template.hamlet
adiff-server/test/: Spec.hs
adiff/assets/: klee.h
adiff/docs/: algorithms.tex
app/: Main.hs  Time.hs
app/vdiff/: Main.hs
app/vdiff-viewer/: Main.hs
assets/sql/: unsoundness.sql
assets/test/: sat.c  simple_reads.c
docker/: base.in  bashrc  cpachecker.in  klee.in  samples.in  seahorn.in  uautomizer.in  ultimate.in
docs/: index.html
docs/experimental-data-static/: findings.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"cbmc"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"cpachecker"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"crab-llvm"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"klee"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"seacrab"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"seahorn"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"smack"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"uautomizer"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"utaipan"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Unsat"]],[{"tag":"RelateName","contents":"cbmc"},["Sat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Unsat"]],[{"tag":"RelateName","contents":"cpachecker"},["Sat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Unsat"]],[{"tag":"RelateName","contents":"crab-llvm"},["Sat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Unsat"]],[{"tag":"RelateName","contents":"klee"},["Sat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Unsat"]],[{"tag":"RelateName","contents":"seacrab"},["Sat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Unsat"]],[{"tag":"RelateName","contents":"seahorn"},["Sat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Unsat"]],[{"tag":"RelateName","contents":"smack"},["Sat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Unsat"]],[{"tag":"RelateName","contents":"uautomizer"},["Sat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cbmc"},["Unknown","Unsat"]],[{"tag":"RelateName","contents":"utaipan"},["Sat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cpachecker"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"cbmc"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cpachecker"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"cpachecker"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cpachecker"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"crab-llvm"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cpachecker"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"klee"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cpachecker"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"seacrab"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cpachecker"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"seahorn"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cpachecker"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"smack"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cpachecker"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"uautomizer"},["Unsat"]]]}.html  findings?q={"tag":"ByVerdict","contents":[[{"tag":"RelateName","contents":"cpachecker"},["Unknown","Sat"]],[{"tag":"RelateName","contents":"utaipan"},["Unsat"]]]}.html  (+1395 more)
language-c-extensible/: .gitignore  .travis.yml  cabal.sandbox.config  language-c.cabal  stack.yaml
language-c-extensible/examples/: ComputeSize.hs  DumpAst.hs
language-doll/: .gitignore  LICENSE  README.md  package.yaml
samples/: array.c  simple.negative.c  simple.positive.c
scripts/: vdiff-docker.hs
src/: Arguments.hs  Data.hs  Diff.hs  Instrumentation.hs  Main.hs  Persistence.hs  Query.hs  RandomStrategy.hs  Timed.hs  Types.hs  Verifier.hs  Verifiers.hs
src/Strategy/: Random.hs  (+2 more)
test/: Spec.hs
vdiff/: README.md  package.yaml
vdiff-docker/: .gitignore  README.md  package.yaml  vdiff-docker.cabal
vdiff-server/: .gitignore  README.md  package.yaml
(+268 files in other folders)
