name:                vdiff
version:             0.1.0.0
synopsis:            vdiff --help
description:         A simple tool to compare static program verifiers
homepage:            https://github.com/chkl/vdiff#readme
author:              Christian Klinger
maintainer:          io@klinch.de
copyright:           All Rights Reserved
license:             AllRightsReserved
category:            Misc
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Diff
                     , Types
                     , Verifier
                     , Verifier.Cbmc
                     , Verifier.CpaChecker
                     , Verifier.Klee
                     , Verifier.Sea
                     , Verifier.Ultimate
                     , Verifier.Util
                     , Verifier.Vim
                     , Timed
                     , Data
                     , Persistence
                     , Instrumentation
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , LambdaCase
                     , PartialTypeSignatures
                     , ScopedTypeVariables
                     , DeriveFunctor
                     , GeneralizedNewtypeDeriving
                     , TypeFamilies
                     , FlexibleContexts
                     , FlexibleInstances
                     , StandaloneDeriving

  build-depends:       base >= 4.7 && < 5
                     , base16-bytestring
                     , bytestring >= 0.10
                     , containers
                     , cryptohash
                     , data-default
                     , file-embed
                     , language-c 
                     , mtl 
                     , optparse-applicative
                     , pretty
                     , process 
                     , random 
                     , rio
                     , safe
                     , sqlite-simple
                     , text
                     , transformers >= 0.5

executable vdiff
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                     , OverloadedStrings
                     , PartialTypeSignatures
                     , DeriveFunctor
                     , GeneralizedNewtypeDeriving
                     , TypeFamilies
                     , FlexibleContexts
                     , FlexibleInstances
                     , StandaloneDeriving
  build-depends:       base >= 4.7 && < 5
                     , vdiff
                     , optparse-applicative
                     , transformers >= 0.5
                     , mtl 
                     , rio

executable vdiff-time
  hs-source-dirs:      app
  main-is:             Time.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  build-depends:       base >= 4.7 && < 5
                     , vdiff
                     , process
                     , rio